<resources>
    <string name="app_name">Letter</string>
    <string name="phone_number_description">Please enter your mobile number to receive a verification code.</string>
    <string name="otp_desc">OTP has been sent to you on you mobile phone. Please enter it below.</string>
    <string name="profile_info">Profile Info</string>
    <string name="search">Search</string>
    <string name="add_users">Add Users</string>
    <string name="calls">Calls</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>
    <string name="download">Download</string>
    <string name="online">Online</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message…</string>
    <string name="msg_token_fmt">Token</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection">Please check your Internet connection</string>
    <string name="retry">Retry</string>
    <string name="new_group">New Group</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="enter_group_name">Enter Group Name....</string>
    <string name="group_info">Group Info</string>
    <string name="add_more">+ Add More</string>
    <string name="participants_0">Participants (0)</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_participants">Add participants</string>

</resources>