<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chats"
        android:icon="@drawable/ic_chat_icon"

        android:title="@string/chats"/>
<!--    app:cnb_backgroundColor="@color/design_default_color_primary"-->
<!--    app:cnb_iconColor="#FFFFFF"-->
<!--    app:cnb_textColor="#FFFFFF"-->
    <item
        android:id="@+id/status"
        android:icon="@drawable/ic_charging_circle"

        android:title="@string/status"/>
<!--    app:cnb_backgroundColor="@color/design_default_color_primary"-->
<!--    app:cnb_iconColor="#FFFFFF"-->
<!--    app:cnb_textColor="#FFFFFF"-->
    <item
        android:id="@+id/calls"
        android:icon="@drawable/ic_call"

        android:title="@string/calls"/>
<!--    app:cnb_backgroundColor="@color/design_default_color_primary"-->
<!--    app:cnb_iconColor="#FFFFFF"-->
<!--    app:cnb_textColor="#FFFFFF"-->
    <item
        android:id="@+id/addUsers"
        android:icon="@drawable/ic_person_add"

        android:title="@string/add_users"/>
<!--    app:cnb_backgroundColor="@color/design_default_color_primary"-->
<!--    app:cnb_iconColor="#FFFFFF"-->
<!--    app:cnb_textColor="#FFFFFF"-->

</menu>