<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chatRoot"
    android:background="@color/chat_background"
    android:orientation="vertical"
    tools:context=".Activities.ChatActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="10dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="1dp"
                    android:src="@drawable/avatar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/currentStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/online"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="7dp" />

                <!--            -->
            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:elevation="20dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/insertEmoticons"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="0dp"
                        android:background="?selectableItemBackground"
                        android:src="@drawable/ic_insert_emoticon"
                        android:visibility="visible"
                        tools:ignore="ContentDescription" />
                    <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                        android:id="@+id/messageBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/type_a_message"
                        android:background="@drawable/flag_transparent"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/type_a_message"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/add"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:background="?selectableItemBackground"
                        android:src="@drawable/ic_add"
                        android:visibility="visible"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circle_send"
                android:contentDescription="@string/todo"
                android:elevation="5dp"
                android:padding="14dp"
                app:srcCompat="@drawable/ic_send" />

        </LinearLayout>
    </LinearLayout>

    <com.ramotion.circlemenu.CircleMenuView
        android:id="@+id/circleMenuView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:visibility="gone"
        app:button_colors="@array/colors"
        app:button_icons="@array/icons" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/downView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:elevation="20dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_circle"
        android:pointerIcon="arrow"
        android:src="@drawable/ic_downward" />

    </RelativeLayout>


